a better fix for alignment issue

--- a/src/components/table/styles.scss
+++ b/src/components/table/styles.scss
@@ -45,6 +45,9 @@
         &[data-key="d_insuff"]{
             width: 18%;
         }
+        &[data-key="d_ratio"]{
+            width: 18%;
+        }
         @media screen and (max-width: 355px){
             &[data-key="liability"], &[data-key="shortfall"], &[data-key="required"] {
                 width: 61px;
